feat: add controller to log container
